--- a/src/RGBStudio/frontend/pages/editor.html
+++ b/src/RGBStudio/frontend/pages/editor.html
@@ -6,10 +6,11 @@
 			font-family: -apple-system, 'Segoe UI Light', Ubuntu, Arial, sans-serif;
 		}
 		</style>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<h1>Hello World!</h1>
 		<svg id="target" width="500" height="500"></svg>
-		<script src="file:///script/editor.m.js"></script>
+		<script src="/script/editor.m.js"></script>
 	</body>
 </html>
