Rewrote most of the widgets

--- a/src/RGBStudio/frontend/pages/editor.html
+++ b/src/RGBStudio/frontend/pages/editor.html
@@ -7,10 +7,12 @@
 		}
 		</style>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="/css/editor.css" rel="stylesheet"></script>
 	</head>
 	<body>
 		<h1>Hello World!</h1>
-		<svg id="target" width="500" height="500"></svg>
+		<svg id="target" width="800" height="800"></svg>
+		<svg id="scratch-pad" width="0" height="0"></svg>
 		<script src="/script/editor.m.js"></script>
 	</body>
 </html>
